# surfmon

./: .betterleaks.toml  .copier-answers.yml  .env.example  .envrc  .gitignore  .lychee.toml  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  README_TEMPLATE.md  REVIEW.md  compare.py  main.py  mkdocs.yml  prek.toml  pyproject.toml  surfmon-20260204-162159.json  surfmon-20260204-162159.md  surfmon-20260204-164700.json  surfmon-20260204-164700.md  watch-demo.tape  watch.py  zensical.toml
.beads/: config.yaml  issues.jsonl
.github/: actionlint.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: ci.yml  docs.yml  issue-triage.yml  pr-description.yml  release.yml
.windsurf/: lifeguard.yaml
docs/: index.md
docs/.overrides/partials/: comments.html
docs/hooks/: readme_images.py
docs/reference/: api.md  cli.md
reports/watch/: 20260204-134518.json  20260204-135024.json  20260204-135529.json  20260204-140034.json  20260204-140538.json  20260204-141040.json
rules/: no-raw-sql-execute.yml  no-raw-sql-executescript.yml  no-sys-exit-in-lib.yml
scripts/: ast_audit.py  check-template-update.sh  check_unspecified_encoding.py  generate_header.py  verify-scaffold.sh
src/surfmon/: __init__.py  _constants.py  cli.py  compare.py  config.py  db.py  display.py  language_servers.py  log_analysis.py  monitor.py  output.py  pty.py  workspaces.py
tests/: conftest.py  test_bugfixes.py  test_cli.py  test_compare.py  test_config.py  test_db.py  test_display.py  test_log_analysis.py  test_monitor.py  test_output.py  test_pty.py  test_workspaces.py
